--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -81,25 +84,25 @@
 
 html,
 body {
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
-  color: rbg(--foreground-rgb);
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground-rgb));
+  background: black;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
+#__next {
+  height: 100%;
+  top: 0;
+  width: 100%;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
